--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,9 @@
       </label>
       <button type="submit">Search</button>
     </form>
-    <div class="backdrop is-hidden">
-      <span class="loader"></span>
-    </div>
-
     <ul class="gallery"></ul>
     <button type="button" class="load-more-btn is-hidden">Load more</button>
+    <div class="loader"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
