--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </form>
     <ul class="gallery"></ul>
     <button type="button" class="load-more-btn is-hidden">Load more</button>
-    <div class="loader"></div>
+    <div class="loader is-hidden"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
